# XLake

./: .dockerignore  .gitignore  Cargo.toml  LICENSE-MIT  README.md
crates/xlake/: Cargo.toml
crates/xlake-ast/: Cargo.toml
crates/xlake-ast/src/: lib.rs
crates/xlake-cli/: Cargo.toml
crates/xlake-cli/src/: args.rs  main.rs
crates/xlake-core/: Cargo.toml
crates/xlake-core/src/: batch.rs  lib.rs  object.rs  stream.rs
crates/xlake-core/src/formats/: batch.rs  mod.rs  stream.rs
crates/xlake-core/src/models/: hash.rs
crates/xlake-derive/: Cargo.toml
crates/xlake-derive/src/: lib.rs
crates/xlake-parser/: Cargo.toml  build.rs
crates/xlake-parser/src/: grammar.lalrpop  lib.rs
crates/xlake/src/: lib.rs
crates/xlake/src/models/: binary.rs  doc.rs  file.rs  mod.rs
crates/xlake/src/models/builtins/: binary.rs  file.rs  mod.rs
crates/xlake/src/models/builtins/batch/: mod.rs
crates/xlake/src/models/builtins/binary/: mod.rs  pdf.rs
crates/xlake/src/models/builtins/doc/: mod.rs  split.rs
crates/xlake/src/models/builtins/stream/: mod.rs
crates/xlake/src/sinks/: stdout.rs
crates/xlake/src/sinks/local/: mod.rs  stdout.rs
crates/xlake/src/srcs/: file.rs  stdin.rs
crates/xlake/src/srcs/local/: csv.rs  file.rs  mod.rs  stdin.rs
crates/xlake/src/stores/: local.rs  mod.rs
