[package]
name = "xlake-core"

authors = { workspace = true }
description = { workspace = true }
documentation = { workspace = true }
edition = { workspace = true }
include = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
full = ["batch"]

batch = ["dep:arrow-json", "dep:datafusion"]

[dependencies]
xlake-ast = { workspace = true }

anyhow = { workspace = true }
arrow-json = { workspace = true, optional = true }
async-trait = { workspace = true }
blake2 = { workspace = true }
bs58 = { workspace = true }
datafusion = { workspace = true, optional = true }
digest = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
