[package]
name = "xlake"

authors = { workspace = true }
description = { workspace = true }
documentation = { workspace = true }
edition = { workspace = true }
include = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
full = ["fs", "io-std", "libreoffice"]

fs = ["tokio/fs"]
io-std = ["tokio/io-std"]
libreoffice = ["dep:async-tempfile", "dep:which", "tokio/fs", "tokio/process"]

[dependencies]
xlake-ast = { workspace = true }
xlake-core = { workspace = true }
xlake-derive = { workspace = true }
xlake-parser = { workspace = true }

anyhow = { workspace = true }
async-tempfile = { workspace = true, optional = true }
async-trait = { workspace = true }
datafusion = { workspace = true }
futures = { workspace = true }
object_store = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
which = { workspace = true, optional = true }
